5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1637_2447.log
== TEST (2019-04-04 22:55:43) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	print("falta ",x)
else:
	y = pago - preco
	print("troco de ", y)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:56:13) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	print("falta ",x)
else:
	y = pago - preco
	print("troco de ", y)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:56:34) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	print("falta ",x)
else:
	y = pago - preco
	print("troco de ", y)
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:59:53) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	a = ("falta ",x)
else:
	y = pago - preco
	a = ("troco de ", y)

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(a,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:01:58) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	print("falta ",round(x,2))
else:
	y = pago - preco
	print("troco de ",round(y,2)
-- ERROR:
File "XXXX", line 10
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:02:06) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	print("falta ",round(x,2))
else:
	y = pago - preco
	print("troco de ",round(y,2))
-- OUTPUT:
falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 23:05:45) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	print("falta ",round(x,2))
else:
	y = pago - preco
	print("troco de ",round(y,2))
-- EXECUTION TIME:
0.180351
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de  0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 23:08:44) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	print("Falta ",round(x,2))
	
else:
	y = pago - preco
	print("Troco de ",round(y,2))
-- EXECUTION TIME:
0.134601
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:54:56) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	print("Falta ",round(x,2))
	
else:
	y = pago - preco
	print("Troco de ",round(y,2))
-- EXECUTION TIME:
0.197336
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:38:12) 
-- CODE:
preco = float(input("valor de preco:"))
pago = float(input("valor a ser pago:"))

if (preco > pago):
	x = preco - pago
	print("Falta ",round(x,2))
	
else:
	y = pago - preco
	print("Troco de ",round(y,2))
-- EXECUTION TIME:
0.140105
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
